--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -605,110 +605,105 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p id="cd117">Report the benefits of a loan that a person or partnership received as a shareholder or related to a shareholder.</p> 
  </details> 
 
-<details id="cd118"><summary>Code 118 – Medical premium benefits</summary> 
-<p>Enter code 118 and report the premiums that you paid or contributed to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
+<details ><summary>Code 118 – Medical premium benefits</summary> 
+<p id="cd118">Enter code 118 and report the premiums that you paid or contributed to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Premium for provincial hospitalization or medical care insurance, or federal hospitalization or medical care insurance for Government of Canada employees and their dependants serving outside of Canada</a></p>	 
 </details> 
 
-<details id="cd119">  <summary>Code 119 – Premiums paid to a group term life insurance plan</summary> 
-<p>Enter code 119 and report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
+<details> <summary>Code 119 – Premiums paid to a group term life insurance plan</summary> 
+<p id="cd119">Enter code 119 and report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Premium for group life insurance</a></p>
 <h4>Issuing TA4 slips - Threshold</h4>
 <p>In this situation, the&nbsp;$500 reporting threshold for T4A slips <strong>does not</strong> apply. </p> 
 <p>Learn more: <a href="#h-2-1">Exceptions list</a></p> 
  </details> 
  
-<details id="cd122">
-  <summary>Code 122 – RESP accumulated income payments paid to other</summary> 
-  <p>Learn more: Code 040&nbsp;–&nbsp;RESP accumulated income payments</p> 
+<details>  <summary>Code 122 – RESP accumulated income payments paid to other</summary> 
+  <p id="cd122">Learn more: Code 040&nbsp;–&nbsp;RESP accumulated income payments</p> 
  </details> 
- <details id="cd123">
-  <summary>Code 123 – Payments from a revoked DPSP</summary> 
-  <p>Report any payments made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr>.</p> 
+
+ <details>  <summary>Code 123 – Payments from a revoked DPSP</summary> 
+  <p id="cd123">Report any payments made from a revoked <abbr title="deferred profit-sharing plan">DPSP</abbr>.</p> 
  </details> 
- <details id="cd124">
-  <summary>Code 124 – Board and lodging at special work sites</summary> 
-  <p>A third party (such as a prime contractor or another subcontractor) can provide board and lodging or transportation to employees of subcontractors. For example, all workers on a site can share common quarters.</p> 
+
+ <details>  <summary>Code 124 – Board and lodging at special work sites</summary> 
+  <p  id="cd124">A third party (such as a prime contractor or another subcontractor) can provide board and lodging or transportation to employees of subcontractors. For example, all workers on a site can share common quarters.</p> 
  <p>Report this amount in Other information using code <strong>124</strong>.</p>
 <p>If an employee does not usually live in a prescribed zone but works at a special work site in a prescribed zone and meets the residency requirements for the northern residents' deductions, do not include in box <strong>028 </strong>the exempt portion for board and lodging benefits the employee receives while working at the special work site which is within 30 kilometres from the nearest urban area having a population of at least 40,000 persons. </p>
+ </details> 
 
-   
-   
+ <details>  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan</summary> 
+  <p  id="cd125">Report any disability benefits paid out of a superannuation or pension plan. These payments do not require payroll deductions (<abbr title="Canada Pension Plan and/or Quebec Pension Plan">CPP/QPP</abbr>, <abbr title="employment insurance">EI</abbr>, <abbr title="Provincial parental insurance plan">PPIP</abbr>, and income tax).</p> 
  </details> 
- <details id="cd125">
-  <summary>Code 125 – Disability benefits paid out of a superannuation or pension plan</summary> 
-  <p>Report any disability benefits paid out of a superannuation or pension plan. These payments do not require payroll deductions (<abbr title="Canada Pension Plan and/or Quebec Pension Plan">CPP/QPP</abbr>, <abbr title="employment insurance">EI</abbr>, <abbr title="Provincial parental insurance plan">PPIP</abbr>, and income tax).</p> 
+
+ <details>  <summary>Code 126 – Pre-1990 past service contributions while a contributor</summary> 
+  <p id="cd126">Learn more: Code 032 – Registered pension plan contributions (past service)</p> 
  </details> 
- <details id="cd126">
-  <summary>Code 126 – Pre-1990 past service contributions while a contributor</summary> 
-  <p>Learn more: Code 032 – Registered pension plan contributions (past service)</p> 
- </details> 
- <details id="cd127">
-  <summary>Code 127 – Veterans' benefits</summary> 
- <p>Report the sum of the following amounts: </p>
+
+ <details>  <summary>Code 127 – Veterans' benefits</summary> 
+ <p  id="cd127">Report the sum of the following amounts: </p>
 <ul><li>amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well being Act (other than an amount determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of the Veterans Well being Act, as modified where applicable, under Part 5 of that Act)</li>
 <li>amounts paid in the year that were payable under any of subsections 99(6), 109(1) and 115(5) and sections 124 to 126 of the Veterans Well-being Act</li></ul>
  </details> 
-  <details id="cd128">
-  <summary>Code 128 – Veterans’ benefits eligible for pension splitting</summary> 
-  <p>Report the amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act, if the amount is determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of that Act (as modified, where applicable, under Part 5 of that Act). </p>
+ 
+ <details>  <summary>Code 128 – Veterans’ benefits eligible for pension splitting</summary> 
+  <p  id="cd128">Report the amounts paid in the year for an income replacement benefit payable under Part 2 of the Veterans Well-being Act, if the amount is determined under subsection 19.1(1), paragraph 23(1)(b) or subsection 26.1(1) of that Act (as modified, where applicable, under Part 5 of that Act). </p>
 <p>Also, report this sum in box <strong>016</strong>.</p> 
  </details>
- <details id="cd129">
-  <summary>Code 129 – Tax deferred cooperative share</summary> 
-  <p>Report all tax deferred cooperative shares issued by an agricultural cooperative in the year.</p> 
- </details> 
- <details id="cd130">
-  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant</summary> 
-  <p>Report Apprenticeship Incentive Grants or Apprenticeship Incentive Grants for Women paid to registered apprentices who have successfully completed their first or <span class="nowrap">second-year/level</span> (or equivalent) of&nbsp;their apprenticeship program in a Red Seal trade.</p> 
+
+ <details>  <summary>Code 129 – Tax deferred cooperative share</summary> 
+  <p  id="cd129">Report all tax deferred cooperative shares issued by an agricultural cooperative in the year.</p> 
+ </details>
+ 
+ <details>  <summary>Code 130 – Apprenticeship incentive grant, Apprenticeship Incentive Grant for Women or Apprenticeship completion grant</summary> 
+  <p  id="cd130">Report Apprenticeship Incentive Grants or Apprenticeship Incentive Grants for Women paid to registered apprentices who have successfully completed their first or <span class="nowrap">second-year/level</span> (or equivalent) of&nbsp;their apprenticeship program in a Red Seal trade.</p> 
   <p>Report Apprenticeship Completion Grants paid to registered apprentices who have completed their apprenticeship training in a Red Seal trade.</p> 
  </details> 
- <details id="cd131">
-  <summary>Code 131 – Registered disability savings plan</summary> 
-  <p>Report payments paid to an RDSP plan beneficiary.</p> 
+
+ <details>  <summary>Code 131 – Registered disability savings plan</summary> 
+  <p  id="cd131">Report payments paid to an RDSP plan beneficiary.</p> 
  </details> 
- <details id="cd132">
-  <summary>Code 132 – Wage earner protection program</summary> 
-  <p>Report payments paid to workers due to employer bankruptcy or insolvency.</p> 
+ 
+<details>  <summary>Code 132 – Wage earner protection program</summary> 
+  <p id="cd132">Report payments paid to workers due to employer bankruptcy or insolvency.</p> 
  </details> 
- <details id="cd133">
-  <summary>Code 133 – Variable pension benefits</summary> 
-  <p>Report variable pension benefits paid out of a money purchase <abbr title="registered pension plan">RPP</abbr>.</p> 
+ 
+<details >  <summary>Code 133 – Variable pension benefits</summary> 
+  <p id="cd133">Report variable pension benefits paid out of a money purchase <abbr title="registered pension plan">RPP</abbr>.</p> 
 <p>Report the variable payment life annuity amount paid from a <abbr title="pool registered pension plan">PRPP</abbr> and money purchase RPP.</p>
  </details> 
- <details id="cd134">
-  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount</summary> 
-  <p>Report the taxable portion of amounts paid during the exempt period to a beneficiary who is a resident of Canada.</p>
+ 
+<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount</summary> 
+  <p  id="cd134">Report the taxable portion of amounts paid during the exempt period to a beneficiary who is a resident of Canada.</p>
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/financial/tax-free-savings-account-tfsa.html">Tax-free savings account (TFSA)</a>.</p> 
  </details> 
- <details id="cd135">
-  <summary>Code 135 – Recipient-paid premiums for private health services plans</summary> 
- <p>Report code 135 and report the amounts that the <strong>former or retired employee paid</strong>. The use of code 135 is optional. However, if you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
+
+ <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans</summary> 
+ <p  id="cd135">Report code 135 and report the amounts that the <strong>former or retired employee paid</strong>. The use of code 135 is optional. However, if you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
 		    <p>Recipient-paid premiums to a private health services plan are considered qualifying medical expenses and can be claimed by the recipient on their income tax and benefit return. </p>
 		    <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Premium paid to private health services plan (PHSP)</a></p>	 
  </details> 
- <details id="cd136">
-<summary>Code 136 – Parents of Murdered or Missing Children/Parents of Young Victims of Crimes
-</summary> 
-  <p>Report amounts paid out to the beneficiary from the Canadian Benefit for Parents of Young Victims of Crime.</p>
+
+ <details><summary>Code 136 – Parents of Murdered or Missing Children/Parents of Young Victims of Crimes</summary> 
+  <p  id="cd136">Report amounts paid out to the beneficiary from the Canadian Benefit for Parents of Young Victims of Crime.</p>
    <p>If the incident occurred before September 30, 2018, continue to use code 136 to report the amounts paid out. These amounts are still eligible under the former Parents of Murdered or Missing Children (PMMC) grant. </p>
 <p>Learn more: <a href="/en/employment-social-development/programs/ei/ei-list/ei-employers-parents-young-victims-crime.html">Canadian Benefit for Parents of Young Victims of Crime</a></p>
  </details> 
- <details id="cd144">
-  <summary>Code 144 – Indian (exempt income) – Other income</summary> 
-  <p>Report all amounts that are exempt income for Indians and are not reported elsewhere on a T4A&nbsp;slip.</p> 
+
+ <details>  <summary>Code 144 – Indian (exempt income) – Other income</summary> 
+  <p  id="cd144">Report all amounts that are exempt income for Indians and are not reported elsewhere on a T4A&nbsp;slip.</p> 
  </details> 
- <details id="cd146">
-  <summary>Code 146 – Indian (exempt income) – Pension or superannuation</summary> 
-  <p>Pension or superannuation income is usually exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Report the exempt income using code <strong>146</strong>. Do not report this amount in box 016.</p> 
+
+ <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation</summary> 
+  <p  id="cd146">Pension or superannuation income is usually exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Report the exempt income using code <strong>146</strong>. Do not report this amount in box 016.</p> 
  </details> 
- <details id="cd148">
-  <summary>Code 148 – Indian (exempt income) – Lump-sum payments</summary> 
-  <p>Lump-sum payment income is usually exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Report this amount using code <strong>148</strong>. Do not report this amount in box 018.</p> 
+
+ <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments</summary> 
+  <p  id="cd148">Lump-sum payment income is usually exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt. Report this amount using code <strong>148</strong>. Do not report this amount in box 018.</p> 
  </details> 
- <details id="cd150">
-  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts</summary> 
-  <p>Report payments under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries.</p> 
+
+ <details>  <summary>Code 150 – Labour Adjustment Benefits Act and Appropriation Acts</summary> 
+  <p  id="cd150">Report payments under the Labour Adjustment Benefits Act or a benefit payable under the Appropriation Acts to compensate for loss of office or employment, such as in the textile and <span class="nowrap">leather-tanning</span> industries.</p> 
  </details> 
  
  <details>  <summary>Code 152 – SUBP qualified under the Income Tax Act</summary> 
