--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -395,7 +395,7 @@
                     <summary>Box 018 – Lump-sum payments</summary>
         <p>Report the amount for the taxable portion of a <strong>single payment</strong> out of a:</p>
 
-<ul class="list-unstyled cnjnctn-type-or ">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">Pension fund or plan including any single payment resulting from a:
 <ul class="list-unstyled cnjnctn-type-or">
  <li class="cnjnctn-col">Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
