--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -322,12 +322,12 @@
    <details>
                     <summary>Box 061 – Payer's program account number</summary>
                   
-        <p><a id="bx061"></a>Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>.</p>
+        <p id="bx061">Enter your <span class="nowrap">15-character</span> <a href="#account" aria-controls="centred-popup" class="wb-lbx" role="button">payroll account&nbsp;<span class="far fa-question-circle"></span></a> (for example, 123456789RP0001) on your copy and the copy you send to the CRA <strong>only</strong>.</p>
 <p><strong>Do not</strong> enter your payroll account on the copies you give to the recipients.</p>
                 </details>           
 
- <details><summary id="bx_15"><span class="label label-warning">New - T4A slips filed on or after calendar year 2024</span> Box 015 – Payer-offered dental benefits (PODB)</summary>
-<p>For T4A slips filed on or after calendar year 2024, if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to a recipient, enter the appropriate code from the following list to indicate the level of access to services you provided:</p>
+ <details><summary><span class="label label-warning">New - T4A slips filed on or after calendar year 2024</span> Box 015 – Payer-offered dental benefits (PODB)</summary>
+<p id="bx_15">For T4A slips filed on or after calendar year 2024, if you <strong>provided access to any dental care insurance or for coverage of dental services of any kind</strong> to a recipient, enter the appropriate code from the following list to indicate the level of access to services you provided:</p>
 
     
 <div class="table-responsive section">
@@ -397,13 +397,13 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">Pension fund or plan including any single payment resulting from a:
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or  mrgn-tp-md">
  <li class="cnjnctn-col">Withdrawal from the plan, retirement from employment, or death of an employee or former employee</li>
 <li class="cnjnctn-col">Termination of, amendment to, or modification of the plan</li>
 <li class="cnjnctn-col">Reimbursement of any over-contributions to the plan</li>
 </ul></li>
  <li class="cnjnctn-col">Deferred profit sharing plan (DPSP) including a single payment due to a:
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or  mrgn-tp-md">
  <li class="cnjnctn-col">Withdrawal from the plan</li>
  <li class="cnjnctn-col">Retirement from employment</li>
  <li class="cnjnctn-col">Death of an employee or former employee</li>
