--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -370,7 +370,7 @@
                     <summary>Box 016 – Pension or superannuation</summary>
                     
     
-        <p>Report the taxable part of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or registered pension fund or plan, including disability benefits paid&nbsp;as a life annuity.</p>
+        <p>Report the amount for the taxable portion of annuity payments you paid to an employee, retired employee, or survivor or spouse of an employee out of, or under, a superannuation or registered pension fund or plan, including disability benefits paid&nbsp;as a life annuity.</p>
 <p><strong>Special situations:</strong></p>
 <ul>
 <li>You may have paid superannuation or pension benefits to a Canadian resident under an <strong>unregistered pension plan </strong>for services that the person rendered in a period throughout which the person <strong>did not reside in Canada</strong>. These payments <strong>cannot</strong> be transferred to a registered pension plan (RPP) or registered retirement savings plan (RRSP)</li>
