--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -759,7 +759,7 @@
 
             <details>
             <summary id="mplyr_nm">Employer's name </summary>
-            <p>Enter your operating or trade name in the space provided. You may also add your business address.</p>
+            <p>Enter your legal name, your operating or trading name (if it differs from your legal name) and address.</p>
             </details>
 
 	<details>
