--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -585,15 +585,14 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
 <details ><summary>Code 118 – Medical premium benefits</summary> 
 <p id="cd118">Enter code 118 and report the premiums that you paid or contributed to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Premium for provincial hospitalization or medical care insurance, or federal hospitalization or medical care insurance for Government of Canada employees and their dependants serving outside of Canada</a></p>	 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
 </details> 
 
 <details> <summary>Code 119 – Premiums paid to a group term life insurance plan</summary> 
 <p id="cd119">Enter code 119 and report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Premium for group life insurance</a></p>
-<h4>Issuing TA4 slips - Threshold</h4>
-<p>In this situation, the&nbsp;$500 reporting threshold for T4A slips <strong>does not</strong> apply. </p> 
-<p>Learn more: <a href="#h-2-1">Exceptions list</a></p> 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
+
+<p>The&nbsp;$500 reporting threshold for T4A slips <strong>does not</strong> apply because this payment is included on the <a href="#exception" aria-controls="centred-popup" class="wb-lbx" role="button">exceptions list&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
  </details> 
  
 <details>  <summary>Code 122 – RESP accumulated income payments paid to other</summary> 
