--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -490,14 +490,22 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 </div>
 
 <section  class="mrgn-tp-md" id="details-codes"> 
+
 <details><summary>Code 014&nbsp;– Recipient's number</summary> 
   <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
  </details> 
- <details> <summary>Code 028 –&nbsp;Other income</summary> 
-  <p id="cd028">Report any other amount which you do not have to report elsewhere on a T4A&nbsp;slip or other information slip if the amount is more than&nbsp;$500 or if you deducted income tax. In most cases, identified amounts are assigned a separate area for reporting.</p> 
-    <p>Do not report payments of fees for services under code&nbsp;<strong>028</strong>. These payments should be reported in box 048&nbsp;– Fees for services.</p> 
-	<p>Employees who are eligible to claim the northern residents deduction for travel benefits will use the information included in boxes 32 and 33 of their T4 slip to correctly calculate their deduction on form T2222, Northern Residents Deductions for 2021.</p>
+
+ <details> <summary>Code 028 –&nbsp;Other income <span class="label label-warning">Jeremiah</span>  </summary> 
+  <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip, or on other information slip if:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+ <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
+ <li class="cnjnctn-col">You deducted income tax</li> 
+</ul>
+<h4>Situations where you may need to report amounts using code 028</h4>
+<p>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan). </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p>
  </details> 
+
  <details> <summary>Code 030 – Patronage allocations</summary> 
   <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
  </details> 
@@ -583,14 +591,14 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p id="cd117">Report the benefits of a loan that a person or partnership received as a shareholder or related to a shareholder.</p> 
  </details> 
 
-<details ><summary>Code 118 – Medical premium benefits</summary> 
-<p id="cd118">Enter code 118 and report the premiums that you paid or contributed to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
+<details ><summary>Code 118 – Medical premium benefits <span class="label label-warning">Jeremiah</span> </summary> 
+<p id="cd118">Report the premiums that you paid or contributed to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
 </details> 
 
-<details> <summary>Code 119 – Premiums paid to a group term life insurance plan</summary> 
-<p id="cd119">Enter code 119 and report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
+<details> <summary>Code 119 – Premiums paid to a group term life insurance plan <span class="label label-warning">Jeremiah</span> </summary> 
+<p id="cd119">Report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
 
 <p>The&nbsp;$500 reporting threshold for T4A slips <strong>does not</strong> apply because this payment is included on the <a href="#exception" aria-controls="centred-popup" class="wb-lbx" role="button">exceptions list&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
  </details> 
@@ -655,10 +663,11 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/financial/tax-free-savings-account-tfsa.html">Tax-free savings account (TFSA)</a>.</p> 
  </details> 
 
- <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans</summary> 
- <p  id="cd135">Report code 135 and report the amounts that the <strong>former or retired employee paid</strong>. The use of code 135 is optional. However, if you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
-		    <p>Recipient-paid premiums to a private health services plan are considered qualifying medical expenses and can be claimed by the recipient on their income tax and benefit return. </p>
-		    <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Premium paid to private health services plan (PHSP)</a></p>	 
+ <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans <span class="label label-warning">Jeremiah</span> </summary> 
+ <p  id="cd135">Report the premiums that you paid to a private health services plans on behalf of a <strong>former or retired</strong> employee.</p>
+<p>The use of code 135 is optional. If you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
+<p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return. </p>
  </details> 
 
  <details><summary>Code 136 – Parents of Murdered or Missing Children/Parents of Young Victims of Crimes</summary> 
