--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -308,7 +308,7 @@
 		</ul>
 		 </details>
 	   <details>
-		   <summary>Renovating two houses for the same relative</summary>
+		   <summary>Renovating 2 houses for the same relative</summary>
 		   <p>It is now 2024 and Jeff is in the process of renovating a new unit in his house for his grandmother, Mary, to live in. Mary is planning to move into Jeff's house in 2025. Steve, Mary's son, has already successfully claimed the MHRTC on his 2023 tax return for a unit in his house that Mary is currently living in.</p>
 		   <p>Jeff <strong>cannot</strong> claim the MHRTC for this renovation because Mary has already been associated with an earlier MHRTC claim. Only one renovation can be claimed for a qualifying individual (Mary) during their lifetime.</p>
 	   </details>
