--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -450,7 +450,6 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
                       
         <p id="bx048">Report any fees or other amounts paid for services. </p>
     <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 048.</p> 
-<p><strong>Do not</strong> include daycare subsidies income in box 048. This amount must be included in "Other Information" using <a href="#cd028">code 028</a>.</p>   
 
         <p>The CRA is currently <strong>not</strong> applying penalties for failure to report fees for services.</p>
  <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
@@ -510,8 +509,8 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <li class="cnjnctn-col">You deducted income tax</li> 
 </ul>
 <h4>Situations where you may need to report amounts using code 028</h4>
-<p>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan). </p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p>
+<p>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p>
+<p>You paid daycare subsidies, learn more on taxable benefits: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/provided/child-care-expenses.html">Child care expenses</a></p>
  </details> 
 
  <details> <summary>Code 030 – Patronage allocations</summary> 
