--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -509,9 +509,11 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <li class="cnjnctn-col">You deducted income tax</li> 
 </ul>
 <h4>Situations where you may need to report amounts using code 028</h4>
-<p>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></p>
-<p>You paid daycare subsidies, learn more on taxable benefits: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/provided/child-care-expenses.html">Child care expenses</a></p>
- </details> 
+<ul>
+<li>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></li>
+<li>You paid daycare subsidies, learn more on taxable benefits: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/provided/child-care-expenses.html">Child care expenses</a></li>
+</ul>
+</details> 
 
  <details> <summary>Code 030 – Patronage allocations</summary> 
   <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
