--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -517,7 +517,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
  <details> <summary>Code 030 – Patronage allocations</summary> 
   <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
- </details> 
+<p>Learn more on tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/patronage-allowances.html">Patronage payments</a></p>	 
+ 
+</details> 
 
  <details> <summary>Code 032 –&nbsp;Registered pension plan contributions (past service)</summary> 
   <p id="cd032">Report the contributions a former employee made to buy past service. The plan administrator usually&nbsp;fills out&nbsp;the T4A&nbsp;slip when an employer-employee relationship no longer exists. Include any instalment interest paid for past service contributions. Instalment interest is the portion of contributions that represents the amount charged to buy past service over time. In the "Other information" area, enter code&nbsp;<strong>032</strong> and the amount of the payment.</p> 
