--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -442,7 +442,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <p>Report on a <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>&nbsp;the annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section&nbsp;12.2 of the <abbr title="Income Tax Act">ITA</abbr>.</p>
 <p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p>
  
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
+<p>Learn more on tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
 
                 </details>
            
@@ -658,7 +658,9 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
  <details>  <summary>Code 131 – Registered disability savings plan</summary> 
   <p  id="cd131">Report payments paid to an RDSP plan beneficiary.</p> 
- </details> 
+<p>Learn more on tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp/payments-rules/payments-rdsp-reported.html">RDSP payments</a></p>	 
+ 
+</details> 
  
 <details>  <summary>Code 132 – Wage earner protection program</summary> 
   <p id="cd132">Report payments paid to workers due to employer bankruptcy or insolvency.</p> 
