--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -442,7 +442,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <p>Report on a <a href="/en/revenue-agency/services/forms-publications/forms/t5.html">T5 slip</a>&nbsp;the annuity payments for accrued income from a life insurance policy that you include when you calculate a person's income under the provisions of section&nbsp;12.2 of the <abbr title="Income Tax Act">ITA</abbr>.</p>
 <p>Report annuity payments to a non-resident on an <a href="https://www.canada.ca/content/dam/cra-arc/formspubs/pbg/nr4/nr4-21e.pdf">NR4 slip</a>.</p>
  
-<p>Learn more on tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/annuities.html">Annuity payments </a> </p>
 
                 </details>
            
@@ -452,7 +452,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
     <p> Do <strong>not </strong>include GST/HST or PST in the amount reported in box 048.</p> 
 
         <p>The CRA is currently <strong>not</strong> applying penalties for failure to report fees for services.</p>
- <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
+ <p>Learn more on the tax treatement of payments other than regular employment: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a></p>
                 </details>
            
  <details> <summary>Recipient's name and address</summary>
@@ -517,7 +517,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
  <details> <summary>Code 030 – Patronage allocations</summary> 
   <p id="cd030">Report all allocations you gave to customers for their patronage. This includes payments you made in cash or in kind, by certificate of indebtedness, issue of shares, <span class="nowrap">set-off,</span> assignment, or in any other way. Your allocations should be in proportion to the patronage.</p> 
-<p>Learn more on tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/patronage-allowances.html">Patronage payments</a></p>	 
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/patronage-allowances.html">Patronage payments</a></p>	 
  
 </details> 
 
@@ -658,7 +658,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 
  <details>  <summary>Code 131 – Registered disability savings plan</summary> 
   <p  id="cd131">Report payments paid to an RDSP plan beneficiary.</p> 
-<p>Learn more on tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp/payments-rules/payments-rdsp-reported.html">RDSP payments</a></p>	 
+<p>Learn more on the tax treatement of payments other than regular employment: <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-disability-savings-plan-rdsp/payments-rules/payments-rdsp-reported.html">RDSP payments</a></p>	 
  
 </details> 
  
