--- a/subway/mghrtc/who-ctestmaire.html
+++ b/subway/mghrtc/who-ctestmaire.html
@@ -250,7 +250,7 @@
 </li> 
 	   
 	      	   <h2 id="h-3">Sharing renovation costs</h2>
-	      <p>Some families may choose to share the renovation costs amongst two or more family members. When this happens, the credit may be split between them as long as certain conditions are met.</p>
+	      <p>Some families may choose to share the renovation costs between two or more family members. When this happens, the credit may be split between them as long as certain conditions are met.</p>
 	      <p>
 			Refer to: <a href="claimmaire.html">How to claim</a></p>
 
