--- a/subway/mghrtc/claimmaire.html
+++ b/subway/mghrtc/claimmaire.html
@@ -69,7 +69,7 @@
                </ul>
             </nav>
             <h1 property="name" id="wb-cont" class="gc-thickline">How to claim</h1>
-			<p>The person who makes the claim is the eligible individual who paid the renovation costs.</p>
+			<p>The person who makes the claim is the eligible individual who incurred the renovation expenses.</p>
             <h2 class="h3">On this page</h2>
             <ul>
 			 <li><a href="#h-1">When to claim</a></li>
